# whisper-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  whisper-cli.spec
.github/workflows/: dev-build.yml  release.yml
docs/superpowers/plans/: 2026-03-30-whisper-cli.md
docs/superpowers/specs/: 2026-03-30-whisper-cli-design.md
src/whisper_cli/: cli.py  downloader.py  formatter.py  transcriber.py
tests/: conftest.py  test_cli.py  test_downloader.py  test_formatter.py  test_transcriber.py
