[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-cli"
version = "0.1.0"
description = "Transcribe audio/video files to text using OpenAI Whisper"
requires-python = ">=3.9"
dependencies = [
    "openai-whisper",
    "click>=8.0",
    "yt-dlp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
whisper-cli = "whisper_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
